# ar2gems-plugins-examples

./: CMakeLists.txt  LICENSE  README.md  add_property_action.cpp  add_property_action.h  common.h  library_init.cpp  local_high_values.ui  local_high_values_algo.cpp  local_high_values_algo.h  multiply_property_action.cpp  multiply_property_action.h  pie_chart.cpp  pie_chart.h  pie_chart_creator.cpp  pie_chart_creator.h
cmake/: NSIS.template.in
cmake/modules/: FindAR2GEMS.cmake
